# firmware_Poulpe

./: Cargo.toml  README.md  build.rs  extract_hex.sh  index.html  memory.x  rust-toolchain.toml  update_firmware_ethercat.sh
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: firmware_poulpe.drawio
firmware_update_scripts/: README.md  guide.md  update_firmware.sh
src/: dynamixel.rs  lib.rs  main.rs  registers.rs  shared_memory.rs  storage.rs  tmc4671.rs  tmc6200.rs  ventouse.rs
src/config/: README.md  current_sense.rs  flash.rs  mod.rs  motor.rs  motor.rs.old
src/dynamixel/: README.md  bench.ipynb  conversion.rs  hwi.ipynb  mod.rs  packet.rs  register.rs  task.rs  usart_io.rs  v1.rs
src/dynamixel/packet/: error.rs  instruction_packet.rs  mod.rs  status_packet.rs
src/ethercat/: README.md  coe.rs  foe.rs  lan9252.rs  mailbox.rs  mod.rs  task.rs  task1.rs
src/motor_control/: README.md  actuator.rs  analog.rs  axis.rs  axis_sensor.rs  bench.rs  board_state.rs  driver.rs  foc.rs  mod.rs  motor.rs  motors_io.rs  poulpe_state.rs  sensors.rs  sensors_io.rs  task.rs  ventouse.rs
src/registers/: mod.rs
src/sensors/: README.md  ads124s0x.rs  analog.rs  ltc4332.rs  mod.rs  sensors.rs  sensors_io.rs
src/state_machine/: README.md  cia402_registers.rs  cia402_state_machine.rs  mod.rs  poulpe_state.rs
src/utils/: README.md  conversion.rs  errors.rs  flash.rs  mod.rs  shared_memory.rs
tests/: test_conversions.rs
