[package]
edition = "2021"
name = "firmware_poulpe"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
#motor specifig config
# default = ["orbita2d", "ec45", "velocity_feedforward", "cmd_filter", "gearbox_output" ]
# default = ["orbita2d", "ec60", "velocity_feedforward","cmd_filter", "axis_output"] #"gearbox_output" ]
default = ["orbita3d", "ecx22", "velocity_feedforward","cmd_filter","gearbox_output"]
# default = ["orbita3d"]
orbita2d = []
orbita3d = []
ec60 = []
ec45=[]
ecx22=[]
# use command filter to reduce the jerk of the motor
cmd_filter = []
# using velocity feedforward to improve the velocity tracking performance
# if not included in `defaults` the velocity feedforward is not used
velocity_feedforward = []
# deciding which output angle of the motor to control
# after gearbox, after axis reduction, or directly the motor angle (by not specifying any of the following features in `defaults`)
gearbox_output = []  # control the motor angle after the gearbox
axis_output = []  # control the motor angle after the gearbox and axis reduction

# feature signaling that the board does not have a temperature sensor
no_temperature_sensor = []
# feature allowing to ignore the errors and continue the operation 
# this is a debug feature and should not be used in production
ignore_errors = []

# update flash
update_flash = []

[dependencies]
# rustypot = "0.4.2"
# stm32h742vg


#embassy which seems ok
# embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["nightly", "defmt", "stm32h742vg", "time-driver-any", "exti", "memory-x", "unstable-pac", "unstable-traits"] }
# embassy-sync = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt"] }
# embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

# embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
# embassy-net = { version = "0.2.1", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
# embedded-io-async = { version = "0.5.0" }
# embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt"] }
# embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt"] }
# embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7" }



#local
# embassy-stm32 = { version = "0.1.0", path = "../embassy_tests/embassy-stm32", features = ["nightly", "defmt", "stm32h742vg", "time-driver-any", "exti", "memory-x", "unstable-pac", "unstable-traits"] }
# embassy-sync = { version = "0.4.0", path = "../embassy_tests/embassy-sync", features = ["defmt"] }
# embassy-executor = { version = "0.3.0", path = "../embassy_tests/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

# embassy-time = { version = "0.1.5", path = "../embassy_tests/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
# embassy-net = { version = "0.2.1", path = "../embassy_tests/embassy-net", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
# embedded-io-async = { version = "0.5.0" }
# embassy-usb = { version = "0.1.0", path = "../embassy_tests/embassy-usb", features = ["defmt"] }
# embassy-futures = { version = "0.1.0", path = "../embassy_tests/embassy-futures", features = ["defmt"] }
# embassy-embedded-hal = { version = "0.1.0", path = "../embassy_tests/embassy-embedded-hal" }



#Pollen fork...
embassy-stm32 = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["nightly", "defmt", "stm32h742vg", "time-driver-any", "exti", "memory-x","unstable-pac", "unstable-traits"] }
embassy-sync = { version = "0.4.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt"] }
embassy-executor = { version = "0.3.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

embassy-time = { version = "0.1.5", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-net = { version = "0.2.1", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
embedded-io-async = { version = "0.6.1" }
embassy-usb = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt"] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta"}

#Specific commit which works
# embassy-stm32 = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["nightly", "defmt", "stm32h742vg", "time-driver-any", "exti", "memory-x","unstable-pac", "unstable-traits"] }
# embassy-sync = { version = "0.4.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt"] }
# embassy-executor = { version = "0.3.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

# embassy-time = { version = "0.1.5", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
# embassy-net = { version = "0.2.1", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
# embedded-io-async = { version = "0.5.0" }
# embassy-usb = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt"] }
# embassy-futures = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt"] }
# embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c" }



defmt = "0.3"
defmt-rtt = "0.4"


cortex-m = { version = "=0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "=0.7.3"
embedded-hal = "=0.2.7"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = { version = "=1.0.0-rc.1" }
embedded-nal-async = { version = "=0.5.0" }

libm = "0.2.8"


panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "=0.3.28", default-features = false, features = ["async-await"] }
# heapless = { version = "=0.7.15", default-features = false }
rand_core = "0.6.3"
critical-section = "=1.1"
micromath = "2.0.0"
stm32-fmc = "=0.2.4"
embedded-storage = "=0.3.0"
static_cell = { version = "=1.1", features = ["nightly"]}
paste = "1.0.14"
modular-bitfield = "0.11.2"
biquad = "0.4.1"



[dev-dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3.1"

[dev-dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-



[[bin]]
name = "firmware_poulpe" # src/main.rs
test = false
