[package]
edition = "2021"
name = "firmware_poulpe"
version = "0.1.0"
license = "MIT OR Apache-2.0"
default-run = "firmware_poulpe" # Refers to src/main.rs by default

[features]
### orbita specifig config

###### old
## ec60 based orbita 2d + beta hardware
# default = ["orbita2d", "beta", "ec60", "cmd_filter", "axis_output", "use_flash"]

###### beta
## orbita 2d (genric boards with poulpe + 2x BOB)
# default = ["orbita2d", "beta", "ec45",  "cmd_filter", "gearbox_output" , "use_flash"]
## orbita 3d (genric boards with poulpe + 3x BOB)
# default = ["orbita3d", "beta", "ecx22", ,"cmd_filter","gearbox_output", "use_flash"]
orbita2d_beta = ["orbita2d", "beta", "ec45", "cmd_filter", "gearbox_output" , "use_flash", "allow_quickstop", "ethercat"] #"dynamixel"]
orbita3d_beta = ["orbita3d", "beta", "ecx22", "cmd_filter", "gearbox_output", "use_flash", "allow_quickstop", "orbita3d_zero_pre_dvt", "ethercat"] #"dynamixel"]


####### gamma (dvt)
## orbita 2d (gamma elec)
# default = ["orbita2d", "gamma", "ec45", "cmd_filter", "gearbox_output" , "use_flash"]
## orbita 3d (gamma elec)
# default = ["orbita3d", "gamma", "ecx22",  "cmd_filter", "gearbox_output", "use_flash"]
orbita2d_gamma = ["orbita2d", "gamma", "ec45", "cmd_filter", "gearbox_output" , "use_flash", "allow_quickstop", "ethercat"]
orbita3d_gamma = ["orbita3d", "gamma", "ecx22l", "cmd_filter", "gearbox_output", "use_flash", "allow_quickstop", "ethercat"]

## pvt 
orbita2d_pvt = ["orbita2d", "pvt", "ec45", "cmd_filter", "gearbox_output" , "use_flash", "allow_quickstop", "allow_mode_change", "ethercat"]
orbita3d_pvt = ["orbita3d", "pvt", "ecx22l", "cmd_filter", "gearbox_output", "use_flash", "allow_quickstop", "allow_mode_change", "ethercat"]

# default = ["orbita2d_gamma"]
orbita2d = []
orbita3d = []

# motor type
ec60 = []
ec45=[]
ecx22=[]
ecx22l=[]

# driver board type
beta = [] # beta elec with poulpe + 2/3 X sponge+BOB
gamma = [] # new gamma elec with poulpe + ventouse 2d/3d
pvt = [] # pvt elec with poulpe + ventouse 2d/3d

# use command filter to reduce the jerk of the motor
cmd_filter = []
# using velocity feedforward to improve the velocity tracking performance
# if not included in `defaults` the velocity feedforward is not used
velocity_feedforward = []
# deciding which output angle of the motor to control
# after gearbox, after axis reduction, or directly the motor angle (by not specifying any of the following features in `defaults`)
gearbox_output = []  # control the motor angle after the gearbox
axis_output = []  # control the motor angle after the gearbox and axis reduction

# use flash memory (if not included in `defaults` the flash memory is not used)
use_flash = []
# write the new config to the flash (has to be used with `use_flash`)
# if not used the config is read from the flash
write_flash = []

# feature signaling that the board does not have a temperature sensor
no_temperature_sensor = []
# feature allowing to ignore the errors and continue the operation
# this is a debug feature and should not be used in production
ignore_errors = []
# display the task execution time in the debug console
debug_execution_time = []

# for the computation of the zero position prior to Reachy2 DVT
orbita3d_zero_pre_dvt =[]

# chosing the communication protocol
ethercat = []
dynamixel = []

# allow mode of operation to be changed by the user
allow_mode_change = []
# allow the user to send the quick stop command through ethercat
allow_quickstop = []



[dependencies]
# rustypot = "0.4.2"
# stm32h742vg


#embassy which seems ok
# embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["nightly", "defmt", "stm32h742vg", "time-driver-any", "exti", "memory-x", "unstable-pac", "unstable-traits"] }
# embassy-sync = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt"] }
# embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

# embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
# embassy-net = { version = "0.2.1", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
# embedded-io-async = { version = "0.5.0" }
# embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt"] }
# embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7", features = ["defmt"] }
# embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev="74683c7" }



#local
# embassy-stm32 = { version = "0.1.0", path = "../embassy_tests/embassy-stm32", features = ["nightly", "defmt", "stm32h742vg", "time-driver-any", "exti", "memory-x", "unstable-pac", "unstable-traits"] }
# embassy-sync = { version = "0.4.0", path = "../embassy_tests/embassy-sync", features = ["defmt"] }
# embassy-executor = { version = "0.3.0", path = "../embassy_tests/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

# embassy-time = { version = "0.1.5", path = "../embassy_tests/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
# embassy-net = { version = "0.2.1", path = "../embassy_tests/embassy-net", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
# embedded-io-async = { version = "0.5.0" }
# embassy-usb = { version = "0.1.0", path = "../embassy_tests/embassy-usb", features = ["defmt"] }
# embassy-futures = { version = "0.1.0", path = "../embassy_tests/embassy-futures", features = ["defmt"] }
# embassy-embedded-hal = { version = "0.1.0", path = "../embassy_tests/embassy-embedded-hal" }



#Pollen fork...
embassy-stm32 = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["nightly", "defmt", "stm32h742vg", "time-driver-any", "exti", "memory-x","unstable-pac", "unstable-traits"] }
embassy-sync = { version = "0.4.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt"] }
embassy-executor = { version = "0.3.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

embassy-time = { version = "0.1.5", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-net = { version = "0.2.1", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
embedded-io-async = { version = "0.6.1" }
embassy-usb = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta", features = ["defmt"] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", branch="poulpe_beta"}

#Specific commit which works
# embassy-stm32 = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["nightly", "defmt", "stm32h742vg", "time-driver-any", "exti", "memory-x","unstable-pac", "unstable-traits"] }
# embassy-sync = { version = "0.4.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt"] }
# embassy-executor = { version = "0.3.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

# embassy-time = { version = "0.1.5", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
# embassy-net = { version = "0.2.1", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
# embedded-io-async = { version = "0.5.0" }
# embassy-usb = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt"] }
# embassy-futures = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c", features = ["defmt"] }
# embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/pollen-robotics/embassy", rev="9472b7beeda62c856726686b695359b37ffb120c" }



defmt = "0.3"
defmt-rtt = "0.4"


cortex-m = { version = "=0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "=0.7.3"
embedded-hal = "=0.2.7"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = { version = "=1.0.0-rc.1" }
embedded-nal-async = { version = "=0.5.0" }

libm = "0.2.8"


panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "=0.3.28", default-features = false, features = ["async-await"] }
# heapless = { version = "=0.7.15", default-features = false }
rand_core = "0.6.3"
critical-section = "=1.2.0"
micromath = "2.0.0"
stm32-fmc = "=0.2.4"
embedded-storage = "=0.3.0"
static_cell = { version = "=1.1", features = ["nightly"]}
paste = "1.0.14"
modular-bitfield = "0.11.2"
biquad = "0.4.1"



[dev-dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3.1"

[dev-dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-



[[bin]]
name = "firmware_poulpe" # src/main.rs
default = true
